Implement backend logic for product families
